--- a/android-app/app.json
+++ b/android-app/app.json
@@ -20,10 +20,17 @@
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.anonymous.androidapp"
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "expo": {
+      "platforms": [
+        "android",
+        "ios"
+      ]
     }
   }
 }
