--- a/backend-app/package.json
+++ b/backend-app/package.json
@@ -16,8 +16,9 @@
     "body-parser": "^2.2.1",
     "cors": "^2.8.5",
     "express": "^5.2.1",
-    "pg": "^8.16.3",
-    "sqlite3": "^5.1.7"
+    "dotenv": "^17.2.3",
+    "mysql2": "^3.16.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
