--- a/backend-app/package.json
+++ b/backend-app/package.json
@@ -15,8 +15,10 @@
     "archiver": "^7.0.1",
     "body-parser": "^2.2.1",
     "cors": "^2.8.5",
-    "express": "^5.2.1",
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
+    "jsonwebtoken": "^9.0.3",
     "mysql2": "^3.16.0",
     "uuid": "^13.0.0"
   },
